// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should work 1`] = `
Object {
  "instances": Array [
    Object {
      "info": Object {
        "version": "1.0.0",
      },
      "path": "foo-instance",
    },
    Object {
      "info": Object {
        "version": "2.0.0",
      },
      "path": "bar-instance",
    },
  ],
  "name": "foo-package",
}
`;

exports[`should work 2`] = `
Object {
  "instances": Array [
    Object {
      "info": Object {
        "version": "3.0.0",
      },
      "path": "bar-instance",
    },
  ],
  "name": "bar-package",
}
`;

exports[`should work 3`] = `
Object {
  "instances": Array [
    Object {
      "info": Object {
        "version": "4.0.0",
      },
      "path": "bar-instance",
    },
  ],
  "name": "foo-package",
}
`;

exports[`should work 4`] = `
Object {
  "info": Object {
    "version": "1.0.0",
  },
  "path": "foo-instance",
}
`;

exports[`should work 5`] = `
Object {
  "info": Object {
    "version": "2.0.0",
  },
  "path": "bar-instance",
}
`;

exports[`should work 6`] = `
Object {
  "info": Object {
    "version": "3.0.0",
  },
  "path": "bar-instance",
}
`;

exports[`should work 7`] = `
Object {
  "info": Object {
    "version": "4.0.0",
  },
  "path": "bar-instance",
}
`;
